package studyGroupF.player;

import java.util.ArrayList;

public class Item {
    private String itemName;
    private int id;
    private String rarity;
    ArrayList<Item> itemTypes;

    public Item (){
    }

    public void createItem() {
    }

    public void selectRandomItemRarity() {
    }

    public void selectRandomItemType() {
    }

    public void loadItemsFromFileToArrayList() {
    }
}
