package studyGroupF;

public class BattleSystem {

    private int turn;

    private void attack(){

    }

    private void heal(){

    }

    private void useItem(){

    }

    private void escapeBattle(){

    }

}
