package studyGroupF;

public class Monster {

    private int hitPoints;
    private int damage;
    private String monsterName;

    public void createMonster(){

    }


}
